{
    "name": "KnightActions",
    "maps": [
        {
            "name": "gameplay",
            "id": "68b9afda-7b15-44b4-9bc8-bf3dfdc44121",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "d1e05ba1-c4c9-4f88-933c-feb3ea25d7a2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "af36f1a7-6589-484c-ae69-a9568d493e17",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "jumphold",
                    "type": "Button",
                    "id": "079e2402-fa5b-4605-a9f8-1890aef71c95",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "attack1",
                    "type": "Button",
                    "id": "3894790e-7d38-41e1-b139-111989a2aeb5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "677a24b5-d9fd-4e97-b525-7d7dc1fc5a15",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7f13a283-a4cb-487d-af5a-11981be5f875",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c0ad14f8-0e7a-4cf7-94af-411dd8ce6c0c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a22fd17a-743c-4e9d-9c21-a29a5b4d92e8",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb927256-4bd0-41fb-a48b-1c686f142418",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "jumphold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1062ac09-760d-47bb-afa7-a3f22259935b",
                    "path": "<Keyboard>/j",
                    "interactions": "Press,MultiTap",
                    "processors": "",
                    "groups": ";Keyboard",
                    "action": "attack1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}